Updated Movies Page w/add to cart buttons

--- a/Movies.html
+++ b/Movies.html
@@ -48,15 +48,17 @@
   <div class="column Fantasy">
     <div class="content">
       <img src="static/Images/starWars.jpg" alt="StarWars" style="width:100%">
-	  <h4>Star Wars: Revenge of the Sith</h4>
-      <p>Rent: $5.99</p>
-    </div>
+		<!--Button to add to cart-->
+		<p>Rent: $6.99</p>
+		<button id="rentButton" class="rentBtn rent">Add to cart</button>
+	  </div>
   </div>
   <div class="column Fantasy">
     <div class="Fantasy">
       <img src="static/Images/potter.jpg" alt="potter" style="width:100%">
-	  <h4>The Lord Of The Rings: The Two Towers</h4>
-      <p>Rent: $8.99</p>
+	  <!--Button to add to cart-->
+		<p>Rent: $8.99</p>
+		<button id="rentButton" class="rentBtn rent">Add to cart</button>
     </div>
   </div>
   
@@ -64,31 +66,35 @@
   <div class="column Horror">
     <div class="content">
       <img src="static/Images/hill.jpg" alt="hill" style="width:100%">
-	  <h4>Silent Hill</h4>
-      <p>Rent: $10.99</p>
+	  <!--Button to add to cart-->
+		<p>Rent: $5.99</p>
+		<button id="rentButton" class="rentBtn rent">Add to cart</button>
     </div>
   </div>
 	
   <div class="column Horror">
     <div class="content">
       <img src="static/Images/platform.jpg" alt="platform" style="width:100%">
-	  <h4>The Platform</h4>
-      <p>Rent: $11.99</p>
+	  <!--Button to add to cart-->
+		<p>Rent: $11.99</p>
+		<button id="rentButton" class="rentBtn rent">Add to cart</button>
     </div>
   </div>
 
   <div class="column Action">
     <div class="content">
       <img src="static/Images/Rush.jpg" alt="Rush" style="width:100%">
-	  <h4>Rush Hour 3</h4>
-      <p>Rent: $8.99</p>
+	  <!--Button to add to cart-->
+		<p>Rent: $8.99</p>
+		<button id="rentButton" class="rentBtn rent">Add to cart</button>
     </div>
   </div>
   <div class="column Action">
     <div class="content">
       <img src="static/Images/endgame.jpg" alt="endgame" style="width:100%">
-	  <h4>Endgame</h4>
-      <p>$12.99</p>
+	  <!--Button to add to cart-->
+		<p>Rent: $12.99</p>
+		<button id="rentButton" class="rentBtn rent">Add to cart</button>
     </div>
   </div>
 <!-- END GRID -->
